Add info about Wayland workaround